...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Viewer.MainActivity">


    <Button
        android:id="@+id/plan_button"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="#8BC34A"
        android:fontFamily="monospace"
        android:onClick="onPlanButtonClicked"
        android:text="plan"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/added_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="#8BC34A"
        android:fontFamily="monospace"
        android:text="CLEAR"
        android:onClick="onClearButtonClicked"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
...
