...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_button" />

    <Button
        android:id="@+id/start_over_button"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8BC34A"
        android:fontFamily="monospace"
        android:onClick="onStartOverButtonClicked"
        android:text="Start Over"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_button" />

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directions_text" />

    <TextView
        android:id="@+id/directions_header"
        android:layout_width="375dp"
        android:layout_height="42dp"
        android:text="Directions to ___"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
...
