<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Viewer.SettingsActivity">

    <Switch
        android:id="@+id/directions_switch"
        android:layout_width="143dp"
        android:layout_height="82dp"
        android:autoSizeMaxTextSize="32dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="Detailed Directions"
        android:fontFamily="monospace"
        android:textSize="14sp"
        android:onClick="onDirectionsSwitchClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>